@@ -32,7 +32,7 @@
 
 	    <div id="news">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 14 Nov 2008: <a href="/about.html#CHANGES">Numerous small bugfixes and usability enhancements implemented.</a>
+	      <B>News</b>: 17 Nov 2008: <a href="/about.html#CHANGES">Airport swap functionality rewritten, now stable and much faster.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
