@@ -1,3 +1,7 @@
+<b>2008-11-17</b>
+* "Swap airports" rewritten, now much faster and no more threading problems
+* Keyboard focus set automatically after new flight, logout
+
 <b>2008-11-14</b>
 
 * Feature: "Add" now automatically swaps last destination airport to be new source airport.
